--- a/frontend/test.html
+++ b/frontend/test.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
+    <script src="script/main.js" type="module" defer></script>
 </head>
-<body>
+<body data-page="test">
     <h1>Hello World</h1>
 </body>
 </html>
