--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/main.css">
     <script src="script/main.js" type="module" defer></script>
 </head>
-<body>
+<body data-page="signup">
     <form>
         <input type="text" placeholder="Name" name="name" id="name" required>
         <input type="email" placeholder="Email" name="email" id="email" required>
