feat: implement logout and token deletion

--- a/frontend/task.html
+++ b/frontend/task.html
@@ -7,6 +7,6 @@
     <script src="script/main.js" type="module" defer></script>
 </head>
 <body data-page="test">
-    <h1>Hello World</h1>
+    <button id="logoutButton">Logout</button>
 </body>
 </html>
