feat: implement task listing and creation - display tasks and action buttons dynamically - allow task creation with title and description - define a js entrypoint for each html page - improve authentication flow

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
     <link rel="stylesheet" href="style/main.css">
-    <script src="script/main.js" type="module" defer></script>
+    <script src="script/auth/register.js" type="module" defer></script>
 </head>
-<body data-page="signup">
+<body>
     <form>
         <input type="text" placeholder="Name" name="name" id="name" required>
         <input type="email" placeholder="Email" name="email" id="email" required>
