--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
     <link rel="stylesheet" href="style/main.css">
-    <script src="script/main.js" type="module" defer></script>
+    <script src="script/auth/login.js" type="module" defer></script>
 </head>
-<body data-page="login">
+<body>
     <form>
         <input type="email" placeholder="Email" name="email" id="email" required>
         <input type="password" placeholder="password" name="password" id="password" required>
