feat: refactor task rendering and filtering - centralize rendering logic - centralize error handling - add task filtering by status

--- a/frontend/task.html
+++ b/frontend/task.html
@@ -16,6 +16,11 @@
         <textarea name="taskDescription" id="taskDescription" placeholder="e.g. 1 hour of training"></textarea>
         <button type="submit" id="submit">Create</button>
     </form>
+    <select id="select">
+        <option value="all">All</option>
+        <option value="pending">Pending</option>
+        <option value="completed">Completed</option>
+    </select>
     <p id="message"></p>
     <ul id="list"></ul>
 </body>
