refactor: reorganize frontend archictecture and task filtering - group files by responsability[O (crud, filter, counter, render) - move task filtering to client-side state - display number of tasks based on their status

--- a/frontend/task.html
+++ b/frontend/task.html
@@ -21,6 +21,7 @@
         <option value="pending">Pending</option>
         <option value="completed">Completed</option>
     </select>
+    <p id="counter"></p>
     <p id="message"></p>
     <ul id="list"></ul>
 </body>
