--- a/frontend/task.html
+++ b/frontend/task.html
@@ -21,6 +21,8 @@
         <option value="pending">Pending</option>
         <option value="completed">Completed</option>
     </select>
+    <label for="search">Search: </label>
+    <input type="text" name="search" id="search" placeholder="Task name">
     <p id="counter"></p>
     <p id="message"></p>
     <ul id="list"></ul>
