--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/global.css">
+    <link rel="stylesheet" href="style/components.css">
+    <link rel="stylesheet" href="style/signIn.css">
     <script src="script/auth/login.js" type="module" defer></script>
 </head>
 <body>
-    <form>
-        <input type="email" placeholder="Email" name="email" id="email" required>
-        <input type="password" placeholder="password" name="password" id="password" required>
-        <button type="submit" id="submitButton">Log In</button>
-        <a href="/frontend/signup.html">Sign Up</a>
-    </form>
-    <p id="message"></p>
+    <div class="container">
+        <div class="formContainer">
+            <h1>Log In</h1>
+            <form>
+                <div class="field">
+                    <label for="email">Email</label>
+                    <input type="email" placeholder="e.g. you@example.com" name="email" id="email" required>
+                </div>
+                <div class="field">
+                    <label for="password">Password</label>
+                    <input type="password" placeholder="********" name="password" id="password" required>
+                </div>
+                <button type="submit" id="submitButton">Log In</button>
+            </form>
+        </div>
+        <div class="linkContainer">
+            <p>Don't have an account yet? <a href="/frontend/signup.html">Sign Up</a></p>
+            <p id="message"></p>
+        </div>
+    </div>
 </body>
 </html>
