--- a/frontend/task.html
+++ b/frontend/task.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/global.css">
+    <link rel="stylesheet" href="style/components.css">
+    <link rel="stylesheet" href="style/tasks.css">
     <script src="script/tasks/main.js" type="module" defer></script>
 </head>
 <body>
