--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -6,16 +6,31 @@
     <title>To Do List</title>
     <link rel="stylesheet" href="style/global.css">
     <link rel="stylesheet" href="style/components.css">
+    <link rel="stylesheet" href="style/signUp.css">
     <script src="script/auth/register.js" type="module" defer></script>
 </head>
 <body>
-    <form>
-        <input type="text" placeholder="Name" name="name" id="name" required>
-        <input type="email" placeholder="Email" name="email" id="email" required>
-        <input type="password" placeholder="Password" name="password" id="password" required>
-        <button type="submit" id="submitButton">Sign Up</button>
-        <a href="/frontend/index.html">Log In</a>
-    </form>
-    <p id="message"></p>
+    <div class="container">
+        <div class="formContainer">
+            <h1>Sign Up</h1>
+            <form>
+                <div class="field">
+                    <label for="name">Name</label>
+                    <input type="text" placeholder="Kaiky Rodrigues" name="name" id="name" required>
+                </div>
+                <div class="field">
+                    <label for="email">Email</label>
+                    <input type="email" placeholder="you@example.com" name="email" id="email" required>
+                </div>
+                <div class="field">
+                    <label for="password">Password</label>
+                    <input type="password" placeholder="********" name="password" id="password" required>
+                </div>
+                <button type="submit" id="submitButton">Sign Up</button>
+            </form>
+        </div>
+        <p>Already have an account? <a href="/frontend/index.html">Log In</a></p>
+        <p id="message"></p>
+    </div>
 </body>
 </html>
